Fix T75047: Number input advanced mode is not working in JP keyboard

Check for special ascii values for number input first so that we can
quickly decide if we should go into advanced mode.

Reviewed By: Bastien